{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 18,
  "lineage": "c58887b5-fd27-e1a9-9b15-bfeaa5eff140",
  "resources": [
    {
      "module": "module.monitoring",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "name": "monitoring",
                "resource_version": "13997",
                "uid": "5e29ba5e-4e2b-43bf-a773-e16ae48d1a3c"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "monitoring"
          },
          "dependencies": [
            "module.cluster.null_resource.minikube_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "app-dev",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "env": "dev"
                },
                "name": "app-dev",
                "resource_version": "13581",
                "uid": "3a123569-1acd-4cc2-af31-33db825e810b"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "app-dev"
          },
          "dependencies": [
            "module.cluster.null_resource.minikube_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_same_namespace",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "app-dev/allow-same-namespace",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-same-namespace",
                "namespace": "app-dev",
                "resource_version": "13583",
                "uid": "4fa7a25b-c627-48a1-8bc1-58f804a6455e"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": null
                          }
                        ]
                      }
                    ]
                  }
                ],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": null
                          }
                        ]
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-same-namespace",
            "namespace": "app-dev"
          },
          "dependencies": [
            "module.cluster.null_resource.minikube_cluster",
            "module.network.kubernetes_namespace.app"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "default_deny_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "app-dev/default-deny-all",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "default-deny-all",
                "namespace": "app-dev",
                "resource_version": "13582",
                "uid": "00df1f39-a233-488f-a109-1484e1788c6e"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "default-deny-all",
            "namespace": "app-dev"
          },
          "dependencies": [
            "module.cluster.null_resource.minikube_cluster",
            "module.network.kubernetes_namespace.app"
          ]
        }
      ]
    }
  ]
}